# vyatta-cfg-op-pppoe

./: .frlog  .gitignore  COPYING  Makefile.am  README  configure.ac
debian/: README  changelog  control  copyright  lintian  rules  vyatta-cfg-op-pppoe.postinst  vyatta-cfg-op-pppoe.postinst.in  vyatta-cfg-op-pppoe.prerm  vyatta-pppoe.init
etc/init.d/: vyatta-init-pppoe
ppp-templates/: pppoe-autoconf.template
sysconf/: 0002vyatta-pppoe  pppoe-provider-template  rename-pppoe
templates-cfg/interfaces/ethernet/node.tag/pppoe/: node.def
templates-cfg/interfaces/ethernet/node.tag/pppoe/node.tag/access-concentrator/: node.def
templates-cfg/interfaces/ethernet/node.tag/pppoe/node.tag/connect-on-demand/: node.def
templates-cfg/interfaces/ethernet/node.tag/pppoe/node.tag/default-route/: node.def
templates-cfg/interfaces/ethernet/node.tag/pppoe/node.tag/idle-timeout/: node.def
templates-cfg/interfaces/ethernet/node.tag/pppoe/node.tag/local-address/: node.def
templates-cfg/interfaces/ethernet/node.tag/pppoe/node.tag/mtu/: node.def
templates-cfg/interfaces/ethernet/node.tag/pppoe/node.tag/name-server/: node.def
templates-cfg/interfaces/ethernet/node.tag/pppoe/node.tag/password/: node.def
templates-cfg/interfaces/ethernet/node.tag/pppoe/node.tag/remote-address/: node.def
templates-cfg/interfaces/ethernet/node.tag/pppoe/node.tag/service-name/: node.def
templates-cfg/interfaces/ethernet/node.tag/pppoe/node.tag/user-id/: node.def
templates-op/monitor/interfaces/pppoe/: node.def
templates-op/monitor/interfaces/pppoe/node.tag/: node.def
templates-op/monitor/interfaces/pppoe/node.tag/traffic/: node.def
templates-op/set/interface/: node.def
templates-op/set/interface/pppoe/: node.def
templates-op/set/interface/pppoe/node.tag/: node.def
templates-op/set/interface/pppoe/node.tag/down/: node.def
templates-op/set/interface/pppoe/node.tag/up/: node.def
templates-op/show/interfaces/pppoe/: node.def
templates-op/show/interfaces/pppoe/node.tag/: node.def
templates-op/show/interfaces/pppoe/node.tag/capture/: node.def
templates-op/show/interfaces/pppoe/node.tag/log/: node.def
(+25 files in other folders)
